--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,5 @@
+@import "colors"; /* you can omit the _ and extension because scss works it out */
+
 #randomInt {
   background-color: $main;
   border: 1px solid black;
